<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTv"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="result"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/num1Et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num 1"/>

    <EditText
        android:id="@+id/num2Et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num 2"/>

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:text="calculate"
        android:layout_height="wrap_content"/>
</LinearLayout>